--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,7 @@
 $text-primary: #5C5C5C;
 $border-radius-default: 6px;
+$box-shadow-default: 0 0 12px 0 rgba(0,0,0,0.20);
+$box-shadow-sm: 0 0 8px 0 rgba(0,0,0,0.30);
 
 #root{
   align-self: stretch;
@@ -26,7 +28,7 @@ $border-radius-default: 6px;
     justify-content: center;
     align-items: center;
     background: #FFFFFF;
-    box-shadow: 0 0 12px 0 rgba(0,0,0,0.20);
+    box-shadow: $box-shadow-default;
     border-radius: $border-radius-default;
   }
 
@@ -53,11 +55,12 @@ $border-radius-default: 6px;
 
 .body{
   width: 75%;
+  max-height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .refresh-button{
@@ -68,7 +71,9 @@ $border-radius-default: 6px;
 
 .graph-container{
   display: flex;
-  align-self: stretch;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
   padding: 10px;
 }
 
@@ -76,7 +81,7 @@ $border-radius-default: 6px;
 }
 
 .schedules-container{
-  width: 100%;
+  flex: 1;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -88,7 +93,12 @@ $border-radius-default: 6px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  margin: 25px 0;
+  width: calc(50% - 32px);
+  margin: 15px;
+  border-radius: $border-radius-default;
+  border: 1px solid $text-primary;
+
 
   p{
     margin: 10px;
@@ -96,5 +106,56 @@ $border-radius-default: 6px;
 
   table{
     margin: 10px;
+    margin-top: 0;
+  }
+}
+
+.controls-container{
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 15px;
+
+  select{
+    padding: 5px;
+  }
+
+  .controls{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .preview{
+    width: 50%;
+
+    .schedule-item{
+      width: auto;
+    }
+  }
+}
+
+.start-stop-container{
+
+  margin: 15px 0;
+
+  .start{
+
+  }
+
+  .stop{
+
+  }
+
+  .btn{
+    border-radius: $border-radius-default;
+    box-shadow: $box-shadow-default;
+    border: none;
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
   }
 }
