--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -157,5 +157,13 @@ $box-shadow-sm: 0 0 8px 0 rgba(0,0,0,0.30);
     padding: 10px;
     margin: 10px;
     font-weight: bold;
+    color: $text-primary;
   }
+}
+
+.settings-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
